# BE-Events

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  Makefile  README.md  README_BACKEND.md  README_SECURITY.md  SECURITY_GUIDE.md  SEED_DATA_README.md  alembic.ini  config.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  seed_database.py  simple_test.py  test_api_integration.py  test_app.py  test_auth_fix.py  test_create_event.py  test_database_insert.py  test_db_connection.py  test_endpoints.py  test_event_creation.py  test_security.py  test_validations.py  verify_seed_data.py
alembic/: env.py  script.py.mako
alembic/versions/: 121d5edfdf4e_add_autoincrement_to_all_primary_keys.py  480ab9a6dc6d_add_session_and_speaker_models.py  658e68e87fec_make_speaker_id_nullable_in_sessions_.py  7a2351cd2878_add_capacity_field_to_sessions_table.py  7d2efd9f2ea2_update_all_models_with_latest_changes.py  92c7be698140_update_models_with_correct_relationships.py  9f352968aea7_update_event_table.py  __init__.py  b71a6dc2a5c0_create_events_table_for_postgresql.py  c2442b5a4719_initial_migration.py  dd18301e25b3_add_all_models_including_users_roles_.py  f2b49927d637_create_eventes_table.py
app/: __init__.py  main.py
app/api/: api.py
app/core/: config.py  (+4 more)
nginx/: nginx.conf
scripts/: dev.sh  docker-setup.sh  generate-ssl.sh
tests/: README.md  conftest.py  test_api.py  test_auth.py  test_events.py  test_sessions.py  test_user_registration.py
(+56 files in other folders)
